fix align issues with dropdowns

--- a/css/charts.css
+++ b/css/charts.css
@@ -88,6 +88,7 @@
 #forms span {
   font-weight: bold;
   font-size: 18px;
+  margin-right: 12px;
 }
 
 #state-div {
@@ -292,7 +293,7 @@ input:checked + .slider:after {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  margin: 5px 12px;
+  margin: 5px 12px 5px 0px;
   position: relative;
   display: inline-block;
   width: 260px;
@@ -741,6 +742,7 @@ label.check-switch:after {
   #forms span {
     font-size: 16px;
     line-height: 24px;
+    margin-right: 12px;
   }
 
   .dropdown {
